--- a/inventory.ini
+++ b/inventory.ini
@@ -2,6 +2,6 @@
 172.31.35.35
 
 [web:vars]
-Course: "Devops"
-Duration: "120hrs"
-Trainer: "Siva"
+Course="Devops"
+Duration="120hrs"
+Trainer="Siva"
