--- a/inventory.ini
+++ b/inventory.ini
@@ -2,9 +2,8 @@
 172.31.41.155
 
 [web:vars]
-Course="Devops"
-Duration="120hrs"
-Trainer="Siva"
+ansible_user= ec2-user
+ansible_password= DevOps321
 
 
 [local]
