--- a/create_user.yaml
+++ b/create_user.yaml
@@ -5,6 +5,7 @@
   - name: check if user exists or not
     ansible.builtin.command: id expense
     register: USER
+    ignore_errors: True
   - name: print the user information
     ansible.builtin.debug:
      msg "user info {{ USER }}"
