--- a/loops.yaml
+++ b/loops.yaml
@@ -3,8 +3,11 @@
   connection: local
   tasks:
   - name: print names
-    ansible.builtin.debug:
-     msg: "{{ item }}"
+    ansible.builtin.package:
+      name: "{{ item }}"
+      state: present
     loop:
-    - Ramesh
-    - Ram
+    - mysql
+    - nginx
+    - postfix
+  
