--- a/loops.yaml
+++ b/loops.yaml
@@ -1,9 +1,9 @@
 - name: loops concept
   hosts: web
   become: yes
-  connection: local
+
   tasks:
-  - name: print names
+  - name: print packages
     ansible.builtin.package:
       name: "{{ item }}"
       state: present
