--- a/loops_package.yaml
+++ b/loops_package.yaml
@@ -10,4 +10,4 @@
     loop:
     - { name: 'mysql', state: 'present' }
     - { name: 'nginx', state: 'absent' }
-    - { name: 'mysql', state: 'present' }
+    - { name: 'postfix', state: 'present' }
