--- a/filters.yaml
+++ b/filters.yaml
@@ -6,3 +6,15 @@
   - name: print default variable
     ansible.builtin.debug:
       msg: " Hi {{ course | default('Ansible') }}"
+
+  - name: convert to uppercase
+    vars:
+      greeting: " Hello Ramesh"
+    ansible.builtin.debug:
+      msg: "{{ greeting | upper }}"
+
+  - name: convert to lower
+    vars:
+      greeting: " Hello Ramesh"
+    ansible.builtin.debug:
+      msg: "{{ greeting | lower }}"
