--- a/filters.yaml
+++ b/filters.yaml
@@ -24,3 +24,9 @@
       numbers: [ 1, 2, 3, 4, 4, 5, 6, 5,]
     ansible.builtin.debug:
       msg: "{{ numbers | unique }}"
+    
+  - name: get min and max
+    vars:
+      numbers: [ 1, 2, 3, 4, 4, 5, 6, 5,]
+    ansible.builtin.debug:
+      msg: " min {{ numbers | min }}, max {{ numbers | max }} "
