--- a/command-vs-shell.yaml
+++ b/command-vs-shell.yaml
@@ -5,4 +5,6 @@
   - name: execute command
     ansible.builtin.shell: ls -ltr > /tmp/output.txt
 
-
+  - name: check the process
+    ansible.builtin.command: ps -ef | grep ssh
+    register: output
