--- a/instance.yaml
+++ b/instance.yaml
@@ -9,6 +9,7 @@
      - mysql
      - backend
      - frontend
+    zone: sriharikalearningdevops.online
   tasks:
     - name: create ec2 user
       amazon.aws.ec2_instance:
@@ -24,3 +25,14 @@
       ansible.builtin.debug:
         msg: "{{ ec2_instances }}"
 
+    - name: create r53 records
+      amazon.aws.route53:
+          state: present
+          zone: "{{ zone }}"
+          record: "{{ item.item }}.{{ zone }}"
+          type: A
+          ttl: 1
+          value: "{{ item.instances[0].private_ip_address }}" 
+          wait: true
+          overwrite: true
+      loop: "{{ ec2_instances.results }}"
