--- a/instance.yaml
+++ b/instance.yaml
@@ -36,3 +36,16 @@
           wait: true
           overwrite: true
       loop: "{{ ec2_instances.results }}"
+
+    - name: create r53 public records
+      amazon.aws.route53:
+          state: present
+          zone: "{{ zone }}"
+          record: "{{ item.item }}.{{ zone }}"
+          type: A
+          ttl: 1
+          value: "{{ item.instances[0].public_ip_address }}" 
+          wait: true
+          overwrite: true
+      loop: "{{ ec2_instances.results }}"
+      when: ec2_instances.results.item == frontend
